tests/correctness/resources/miniboxing/tests/compile/gh-bug-185+2-no-plugin.check
newSource1.scala:5: error: use the miniboxing plugin!
    val c = new C[Int]
                ^
