tests/correctness/resources/miniboxing/tests/compile/gh-bug-185+2-no-plugin.scala
package miniboxing.tests.compile.bug185

object Test {
  def main(args: Array[String]): Unit = {
    val c = new C[Int]
  }
}

